--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     
-    <script src="./javascript/script.js"></script>
+    <script src="./javascript/ex-1.js"></script>
 </body>
 
 </html>
