--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1>pari e dispari</h1>
 
 
-    
-    <script src="./javascript/ex-1.js"></script>
+    <!-- <script src="./javascript/ex-1.js"></script> -->
+    <script src="./javascript/ex-2.js"></script>
 </body>
 
 </html>
